# job-agent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: job-agent.yml
src/: __init__.py  agent.py  config.py  main.py
src/email/: __init__.py  sender.py
src/email/templates/: digest.html
src/models/: __init__.py  feedback.py  job.py  profile.py
src/scrapers/: __init__.py  base.py  company_pages.py  jobindex.py  jobnet.py  jobunivers.py
src/scrapers/apis/: __init__.py
src/storage/: __init__.py  database.py
src/utils/: __init__.py  deduplication.py  rate_limiter.py
